# infinity-table

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SETUP.md
.cargo/: config
src/: lib.rs  main.rs
src/modes/: chaser.rs  constant.rs  mod.rs  off.rs  wave.rs
