[package]
name = "infinity-table"
version = "0.1.0"
edition = "2018"
license = "MIT OR Apache-2.0"
publish = false

[dependencies.rppal] # https://github.com/golemparts/rppal
# MIT
# Use for Raspi SPI access
version = "0.11.3" 

[dependencies.anyhow] # https://github.com/dtolnay/anyhow
# MIT
# Use for formating temp errors
version = "1.0.31" 

[dependencies.clap] # https://github.com/clap-rs/clap
# MIT / APACHE-2.0
# Use for parsing command-line arguements
version = "2.33.1"

[dependencies.log] # https://github.com/rust-lang/log
# MIT / APACHE-2.0
# Use for logging macros
version = "0.4.8" 

[dependencies.env_logger] # https://github.com/sebasmagri/env_logger
# MIT / APACHE-2.0
# For logging to console
version = "0.7.1"  

[dependencies.futures] # https://github.com/rust-lang/futures-rs
# MIT / APACHE-2.0
# Tokio / Warp use these types
version =  "0.3"
default-features = false
features = ["alloc"] 

[dependencies.tokio] # https://github.com/tokio-rs/tokio
# MIT
# Used by warp
version =  "0.2"
features = ["macros", "time", "process", "rt-threaded"] 

[dependencies.warp] # https://github.com/seanmonstar/warp
# MIT 
# Used as a webserver
version = "0.2"

[profile.release]
opt-level = "s"
panic = "unwind"

[profile.dev]
panic = "unwind"